<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_sync"
        android:icon="@drawable/ic_sync"
        android:title="@string/toolbar_item_sync"
        app:showAsAction="always" />


    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/toolbar_item_settings"
        app:showAsAction="always" />

    <item
        android:id="@+id/sort_menu"
        android:title="@string/sort_by_title">
        <menu>
            <group android:checkableBehavior="single">
                <item android:title="@string/tableId"
                    android:id="@+id/tableIdSort"/>
                <item android:title="@string/name"
                    android:id="@+id/nameSort"/>
            </group>
        </menu>
    </item>

</menu>