<?xml version="1.0" encoding="utf-8"?>
<!--
Copyright (C) 2009 University of Washington

Licensed under the Apache License, Version 2.0 (the "License"); you may not
use this file except in compliance with the License. You may obtain a copy of
the License at

http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
License for the specific language governing permissions and limitations under
the License.
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/status_text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#DDDDDD"
        android:paddingBottom="4dip"
        android:paddingLeft="8dip"
        android:paddingRight="8dip"
        android:paddingTop="4dip"
        android:text="@string/select_form_to_edit"
        android:textSize="21sp"
        android:fontFamily="@font/montserrat"/>

    <ListView
        android:id="@android:id/list"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" />

    <TextView
        android:id="@android:id/empty"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/white"
        android:gravity="center"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/no_items_display_forms"
        android:textColor="@color/black"
        android:textSize="21sp"
        android:fontFamily="@font/montserrat"/>

</LinearLayout>